# dog

./: README.md
dog10/: CMakeLists.txt
dog10/components/bluetooth/: CMakeLists.txt  bluetooth.c  bluetooth.h
dog10/components/debug_tool/: CMakeLists.txt  debug_tool.c  debug_tool.h
dog10/components/gait_planner/: CMakeLists.txt  gait_planner.c  gait_planner.h
dog10/components/iic/: CMakeLists.txt  iic.c  iic.h
dog10/components/kinematics/: CMakeLists.txt  kinematics.c  kinematics.h
dog10/components/mpu6050/: CMakeLists.txt  mpu6050.c  mpu6050.h
dog10/components/pca9685/: CMakeLists.txt  pca9685.c  pca9685.h
dog10/components/pid/: CMakeLists.txt  pid.c  pid.h
dog10/components/web/: CMakeLists.txt  cal.html  control.html  web_server.c  web_server.h
dog10/components/wifi/: CMakeLists.txt  wifi_ap.c  wifi_ap.h
dog10/main/: CMakeLists.txt  main.c
